general project report workflow fixes #1436

--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/add-annotations.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/add-annotations.htm
@@ -32,7 +32,7 @@
 
     <div class="screenshot-container">
         <div id="annotation-report" style="display: inline-flex; flex-direction: column; min-width: 50%; max-width: 50%; padding: 10px 10px 10px 0px;">
-            <div class="annotation-header">
+            <div class="annotation-header" style="display: flex; justify-content: space-between;">
                 <div style="display: inline-block; margin-top: 7px; font-size: 14px;">
                     {% trans "Select a canvas, zoom/pan to position it for a screenshot" %}
                 </div>
