Loading indicators for report download step, re #1442

--- a/arches_for_science/templates/views/components/workflows/project-report-workflow/download-report.htm
+++ b/arches_for_science/templates/views/components/workflows/project-report-workflow/download-report.htm
@@ -9,6 +9,9 @@
             <span style="color: #fff;" data-bind="text: $root.translations.download"></span>
             <i class="fa fa-download" style="margin-inline-start: 0.5em; margin-block-start: 0.25em"></i>
         </button>
-        <div style="padding-top: 10px;" data-bind="text: message"></div>
+        <div style="display: flex; flex-direction: row; padding-top: 10px">
+            <div style="padding-top: 3px" data-bind="text: message"></div>
+            <i style="padding:5px" class="fa fa-spin fa-spinner" data-bind="visible: loading"></i>
+        </div>
     </div>
 </div>
