--- a/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
+++ b/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
@@ -32,21 +32,19 @@
             <div class="form-group">
                 <div class="relative">
                     <label class="col-xs-12 control-label widget-input-label">
-                        <span data-bind="text: $root.translations.cardName"></span>
+                        <span data-bind="text: $root.translations.selectANode"></span>
                     </label>
                 </div>
 
                 <div class="col-xs-12">
-                    <select 
-                        data-bind="
-                            placeholder: $root.translations.selectPrimaryDescriptionIdentifierCard,
-                            value: name.nodegroup_id, 
-                            options: cards, 
-                            optionsText: 'name', 
-                            optionsValue: 'nodegroup_id', 
-                            chosen: {width: '100%', allow_single_deselect: true, disable_search_threshold: 15}
-                        "
-                    ></select>
+                    <input 
+                        data-bind="select2Query: {
+                            select2Config: {
+                                ...baseSelect2Config,
+                                value: selectedNodes.name,
+                            }
+                        }"
+                    ></input>
                 </div>
             </div>
         </div>
@@ -61,10 +59,7 @@
                 <div class="col-xs-12">
                     <input 
                         class="form-control input-lg widget-input" 
-                        data-bind="
-                            attr: {placeholder: $root.translations.useBracketedNodeNames},
-                            textInput: name.string_template
-                        "
+                        data-bind="textInput: name.string_template"
                     >
                 </div>
             </div>
@@ -76,22 +71,19 @@
             <div class="form-group">
                 <div class="relative">
                     <label class="col-xs-12 control-label widget-input-label">
-                        <span data-bind="text: $root.translations.cardName"></span>
+                        <span data-bind="text: $root.translations.selectANode"></span>
                     </label>
                 </div>
 
                 <div class="col-xs-12">
-                    <select 
-                        data-bind="
-                            placeholder: $root.translations.selectPrimaryDescriptionIdentifierCard,
-                            value: description.nodegroup_id, 
-                            options: cards, 
-                            optionsText: 'name', 
-                            optionsValue: 'nodegroup_id', 
-                            valueAllowUnset: true, 
-                            chosen: {width: '100%', allow_single_deselect: true, disable_search_threshold: 15}
-                        "
-                    ></select>
+                    <input 
+                    data-bind="select2Query: {
+                        select2Config: {
+                            ...baseSelect2Config,
+                            value: selectedNodes.description,
+                        }
+                    }"
+                    ></input>
                 </div>
             </div>
         </div>
@@ -106,10 +98,7 @@
                 <div class="col-xs-12">
                     <input 
                         class="form-control input-lg widget-input" 
-                        data-bind="
-                            attr: {placeholder: $root.translations.useBracketedNodeNames},
-                            textInput: description.string_template
-                        "
+                        data-bind="textInput: description.string_template"
                     >
                 </div>
             </div>
@@ -121,22 +110,19 @@
             <div class="form-group">
                 <div class="relative">
                     <label class="col-xs-12 control-label widget-input-label">
-                        <span data-bind="text: $root.translations.cardName"></span>
+                        <span data-bind="text: $root.translations.selectANode"></span>
                     </label>
                 </div>
 
                 <div class="col-xs-12">
-                    <select 
-                        data-bind="
-                            placeholder: $root.translations.selectPrimaryDescriptionIdentifierCard,
-                            value: map_popup.nodegroup_id, 
-                            options: cards, 
-                            optionsText: 'name', 
-                            optionsValue: 'nodegroup_id', 
-                            valueAllowUnset: true, 
-                            chosen: {width: '100%', allow_single_deselect: true, disable_search_threshold: 15}
-                        "
-                    ></select>
+                    <input 
+                    data-bind="select2Query: {
+                        select2Config: {
+                            ...baseSelect2Config,
+                            value: selectedNodes.map_popup,
+                        }
+                    }"
+                    ></input>
                 </div>
             </div>
         </div>
@@ -151,10 +137,7 @@
                 <div class="col-xs-12">
                     <input 
                         class="form-control input-lg widget-input" 
-                        data-bind="
-                            attr: {placeholder: $root.translations.useBracketedNodeNames},
-                            textInput: map_popup.string_template
-                        "
+                        data-bind="textInput: map_popup.string_template"
                     >
                 </div>
             </div>
