fix select2 dropdown and config in analysis areas workflow, re #1454

--- a/arches_for_science/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/arches_for_science/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -55,6 +55,7 @@
             <div class="card">
 
                 <div style="display: flex; gap: 10px">
+                    <!-- ko if: analysisAreaInstances().length === 0 || !!sampleListShowing() -->
                     <button type="button" class="btn" style="
                             background: #9490EE;
                             color: #eee;
@@ -66,7 +67,8 @@
                             {% trans 'Add New Analysis Area' %}
                         </span>
                     </button>
-                
+                    <!-- /ko -->
+
                     <!-- ko if: analysisAreaInstances().length > 0 && !sampleListShowing() -->
                     <button type="button" class="btn" style="
                             background: #9490EE;
