fix selectwoo dropdown for add things step, re #1454

--- a/arches_for_science/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/arches_for_science/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -1,7 +1,7 @@
 <div class="object-search-step">
     <div class="workflow-search-panel">
         <div class="search-bar">
-            <input data-bind="select2Query: {select2Config: targetResourceSelectConfig}">
+            <select data-bind="select2Query: {select2Config: targetResourceSelectConfig}"></select>
         </div>
         <div class="workflow-search-count">
             <div class="count-number" data-bind="text: totalResults()"></div><div>Physical Things</div>
