fix sampling info step with selectwoo integration, re #1454

--- a/arches_for_science/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
+++ b/arches_for_science/templates/views/components/workflows/sample-taking-workflow/sampling-info-step.htm
@@ -8,8 +8,10 @@
                 graphids: [
                     'f71f7b9c-b25b-11e9-901e-a4d18cec433a',
                     '07883c9e-b25c-11e9-975a-a4d18cec433a'
-                ],
-                renderContext: 'workflow', 
+                ], 
+                allowInstanceCreation: false,
+                displayOntologyTable: false,
+                onlyManageResourceIds: true,
                 multiple: true,
                 value: samplers,
                 relatedResourceId: projectValue,
