Use `<select>` tag

--- a/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
+++ b/arches_for_science/templates/views/components/functions/multicard-resource-descriptor.htm
@@ -37,14 +37,14 @@
                 </div>
 
                 <div class="col-xs-12">
-                    <input 
+                    <select 
                         data-bind="select2Query: {
                             select2Config: {
                                 ...baseSelect2Config,
                                 value: selectedNodes.name,
                             }
                         }"
-                    ></input>
+                    ></select>
                 </div>
             </div>
         </div>
